--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
     <supports-screens
         android:largeScreens="true"
-        android:xlargeScreens="true" />
+        android:xlargeScreens="true"/>
 
      <!--<uses-sdk-->
         <!--android:minSdkVersion="6"-->
@@ -38,7 +38,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:debuggable="false">
 
         <!--<meta-data-->
             <!--android:name="com.google.android.gms.version"-->
