--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1"
 
     defaultConfig {
         minSdkVersion 6
@@ -22,7 +22,7 @@ android {
     }
 }
 
-dependencies {
+//dependencies {
 //    compile 'com.android.support:appcompat-v7:18.0.0'
 //    compile 'com.google.android.gms:play-services:4.1.32'
-}
+//}
