--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easytarget.micopi"
-    android:versionCode="9"
-    android:versionName="2.0">
+    android:versionCode="10"
+    android:versionName="2.5">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -39,7 +39,7 @@
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme"
-        android:debuggable="false">
+        android:debuggable="true">
 
         <!--<meta-data-->
             <!--android:name="com.google.android.gms.version"-->
