--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,14 +16,12 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easytarget.micopi"
-    android:versionCode="10"
-    android:versionName="2.5">
+    android:versionCode="11"
+    android:versionName="2.5.10.7">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- Used to request banner and interstitial ads. -->
-    <!--<uses-permission android:name="android.permission.INTERNET" />-->
 
     <supports-screens
         android:largeScreens="true"
@@ -40,10 +38,6 @@
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
 
-        <!--<meta-data-->
-            <!--android:name="com.google.android.gms.version"-->
-            <!--android:value="@integer/google_play_services_version" />-->
-
         <!-- Micopi Welcome Activity -->
         <activity
             android:name="com.easytarget.micopi.WelcomeActivity"
@@ -57,9 +51,10 @@
         <!-- Micopi Main Activity -->
         <activity
             android:name="com.easytarget.micopi.MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation">
+            android:label="@string/app_name">
         </activity>
+
+        <!--android:configChanges="orientation|screenSize"-->
 
         <!-- Activity required to show ad overlays. -->
         <!--<activity-->
