--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -54,12 +54,11 @@
             android:label="@string/app_name">
         </activity>
 
-        <!--android:configChanges="orientation|screenSize"-->
+        <service
+            android:enabled="true"
+            android:exported="false"
+            android:name=".BatchService" />
 
-        <!-- Activity required to show ad overlays. -->
-        <!--<activity-->
-            <!--android:name="com.google.android.gms.ads.AdActivity"-->
-            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
     </application>
 
 </manifest>
