--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
 <!--See the License for the specific language governing permissions and-->
 <!--limitations under the License.-->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easytarget.micopi"
-    android:versionCode="18"
+    android:versionCode="19"
     android:versionName="3">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -40,17 +41,24 @@
         <!-- Micopi Welcome Activity -->
         <activity
             android:name=".ui.WelcomeActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+
         <!-- Micopi Main Activity -->
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.ContactActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppThemeActionBar">
+        </activity>
+
+        <activity
+            android:name=".ui.BatchActivity"
             android:label="@string/app_name">
         </activity>
 
