--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easytarget.micopi"
-    android:versionCode="19"
-    android:versionName="3">
+    android:versionCode="20"
+    android:versionName="3.0-bex">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -40,7 +40,7 @@
 
         <!-- Micopi Welcome Activity -->
         <activity
-            android:name=".ui.WelcomeActivity"
+            android:name="org.eztarget.micopi.ui.WelcomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,20 +52,20 @@
 
         <!-- Micopi Main Activity -->
         <activity
-            android:name=".ui.ContactActivity"
+            android:name="org.eztarget.micopi.ui.ContactActivity"
             android:label="@string/app_name"
             android:theme="@style/AppThemeActionBar">
         </activity>
 
         <activity
-            android:name=".ui.BatchActivity"
+            android:name="org.eztarget.micopi.ui.BatchActivity"
             android:label="@string/app_name">
         </activity>
 
         <service
             android:enabled="true"
             android:exported="false"
-            android:name=".BatchService" />
+            android:name="org.eztarget.micopi.BatchService" />
 
     </application>
 
