--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easytarget.micopi"
-    android:versionCode="20"
-    android:versionName="3.0-bex">
+    android:versionCode="21"
+    android:versionName="3.1">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -27,10 +27,6 @@
     <supports-screens
         android:largeScreens="true"
         android:xlargeScreens="true"/>
-
-     <!--<uses-sdk-->
-        <!--android:minSdkVersion="6"-->
-        <!--android:targetSdkVersion="19" />-->
 
     <application
         android:allowBackup="true"
