--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,23 @@
-
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.2'
-    }
-}
-apply plugin: 'com.android.application'
+        classpath 'com.android.tools.build:gradle:1.5.0'
 
-repositories {
-    mavenCentral()
-}
-
-android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
-    defaultConfig {
-        minSdkVersion 7
-        targetSdkVersion 22
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    compile "com.android.support:appcompat-v7:22.1.1"
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 
-
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
