--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--Copyright (C) 2014 Easy Target-->
-
-<!--Licensed under the Apache License, Version 2.0 (the "License");-->
-<!--you may not use this file except in compliance with the License.-->
-<!--You may obtain a copy of the License at-->
-
-<!--http://www.apache.org/licenses/LICENSE-2.0.txt-->
-
-<!--Unless required by applicable law or agreed to in writing, software-->
-<!--distributed under the License is distributed on an "AS IS" BASIS,-->
-<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
-<!--See the License for the specific language governing permissions and-->
-<!--limitations under the License.-->
-
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.easytarget.micopi">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.eztarget.micopi">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <supports-screens
-        android:largeScreens="true"
-        android:xlargeScreens="true"/>
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <!-- Micopi Welcome Activity -->
         <activity
-            android:name="com.easytarget.micopi.ui.WelcomeActivity"
+            android:name="org.eztarget.micopi.ui.WelcomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,19 +26,19 @@
 
         <!-- Micopi Main Activity -->
         <activity
-            android:name="com.easytarget.micopi.ui.ContactActivity"
+            android:name="org.eztarget.micopi.ui.ContactActivity"
             android:label="@string/app_name">
         </activity>
 
         <activity
-            android:name="com.easytarget.micopi.ui.BatchActivity"
+            android:name="org.eztarget.micopi.ui.BatchActivity"
             android:label="@string/app_name">
         </activity>
 
         <service
             android:enabled="true"
             android:exported="false"
-            android:name="com.easytarget.micopi.BatchService" />
+            android:name="org.eztarget.micopi.ImageService" />
 
     </application>
 
