--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+# Gradle buy_upgrade configured through the IDE *will override*
+# any buy_upgrade specified in this file.
 
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
 # Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
+# The setting is particularly useful for tweaking memory buy_upgrade.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
